<resources>
    <string name="app_name">Job Portal</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="login">Login</string>
    <string name="signup_link">Doesn\'t have account? Signup</string>
    <string name="signup">Signup</string>
    <string name="forget_password">Forget Password</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="add">Add</string>
    <string name="change_language">change Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log_out">Log Out</string>
    <string name="details">Details</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="task_manager">Task Manager</string>
    <string name="add_your_task">Add Your Task</string>
    <string name="title">Title:</string>
    <string name="note">Note:</string>
    <string name="note_hint">Note</string>
    <string name="title_hint">title</string>
    <string name="save">Save</string>
    <string name="update_your_note">Update your note</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="change_mode">Change mode</string>
    <string name="location">Location</string>
    <string name="your_location_here">your location here</string>
    <string name="job_title">Job Title</string>
    <string name="designation">Designation</string>
    <string name="salary">Salary</string>
    <string name="website">Website</string>
    <string name="phone">Phone</string>
    <string name="phone_number">phone number</string>
    <string name="i_e_google_com">i.e google.com</string>
    <string name="no_of_vacancy">No. of vacancy</string>
    <string name="i_e_1_2_3">i.e. 1,2,3</string>
    <string name="qualifications">Qualifications</string>
    <string name="skills">Skills</string>
    <string name="dead_line">Dead Line</string>
    <string name="experience">experience</string>
    <string name="edit_or_delete">Edit or Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">start</string>
    <string name="close">close</string>
    <string name="select_any_job_category">Select any Job Category</string>
    <string name="job_portal">Job Portal</string>
    <string name="catagory">Catagory</string>
    <string name="only_pdf_file_size_upto_10mb">*Only PDF File Size Upto 10MB</string>
    <string name="no_file_selected">No file selected</string>
    <string name="upload_cv">upload Cv</string>
    <string name="your_name">Your Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="jobseeker_gmail_com">jobseeker@gmail.com</string>

</resources>